# ogl-flib

./: .gitignore  CMakeLists.txt  README.md  readme.md
assets/models/british_house/: license.txt  scene.gltf
assets/models/cube/: cube.mtl
assets/models/fury/: license.txt  scene.gltf
assets/shaders/: blur.frag  depth.frag  depth.vert  discard.frag  edge.frag  fbo.vert  grayscale.frag  invert.frag  pixel.frag  reflect.frag  refract.frag  scene.frag  scene.vert  sharpen.frag  simple.frag  simple.vert  skybox.frag  skybox.vert
imgui-master/: CMakeLists.txt
src/: CMakeLists.txt
src/00-basic/: CMakeLists.txt  main.cpp
src/01-hello/: CMakeLists.txt  main.cpp
src/02-scene/: CMakeLists.txt  main.cpp
src/03-model/: CMakeLists.txt  main.cpp
src/04-depth/: CMakeLists.txt  main.cpp
src/05-outline/: CMakeLists.txt  main.cpp
src/06-discard/: CMakeLists.txt  main.cpp
src/07-blend/: CMakeLists.txt  main.cpp
src/08-fbo/: CMakeLists.txt  main.cpp
src/09-cubemap/: CMakeLists.txt  reflect.cpp  refract.cpp
src/flib/: CMakeLists.txt  config.in.h  fapplication.cpp  fapplication.hpp  fcamera.cpp  fcamera.hpp  fheaders.hpp  fid.cpp  fid.hpp  fimage.cpp  fimage.hpp  fkinetic.cpp  fkinetic.hpp  flib.hpp  flight.cpp  flight.hpp  fmesh.cpp  fmesh.hpp  fmodel.cpp  fmodel.hpp  fnode.cpp  fnode.hpp  fprogram.cpp  fprogram.hpp  fscene.cpp  fscene.hpp  fsceneapp.cpp  fsceneapp.hpp  fskybox.cpp  fskybox.hpp  ftexture.cpp  ftexture.hpp  ftransform.cpp  ftransform.hpp  futils.cpp  futils.hpp
src/tests/: CMakeLists.txt  test_glm.cpp  test_obj.cpp
(+3 files in other folders)
