set(CMAKE_CXX_STANDARD 17)
add_compile_definitions(DEBUG)

add_subdirectory(flib)
add_subdirectory(tests)
add_subdirectory(00-basic)
add_subdirectory(01-hello)
add_subdirectory(02-scene)
add_subdirectory(03-model)
add_subdirectory(04-depth)
add_subdirectory(05-outline)
add_subdirectory(06-discard)
add_subdirectory(07-blend)
add_subdirectory(08-fbo)
add_subdirectory(09-cubemap)
